--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id "kotlin-kapt"
 }
 
 android {
@@ -26,28 +27,35 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
+
+        sourceCompatibility javaVer
+        targetCompatibility javaVer
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        useIR = true
+        jvmTarget = javaVer
     }
 }
 
 dependencies {
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.1"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0-beta01'
+    implementation 'androidx.core:core-ktx:1.5.0-beta02'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "androidx.core:core-animation:1.0.0-alpha02"
     implementation "androidx.vectordrawable:vectordrawable-animated:1.1.0"
-    implementation "androidx.activity:activity-ktx:1.3.0-alpha02"
+    implementation "androidx.activity:activity-ktx:1.3.0-alpha03"
     implementation "androidx.fragment:fragment-ktx:1.3.0"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+    def lifecycleVer = "2.3.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVer"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVer"
+    // implementation 'com.airbnb.android:mavericks:2.0.0'
+    implementation 'com.airbnb.android:mvrx-rxjava2:2.0.0-beta3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
