--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.5.0-beta02'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
+    implementation "androidx.recyclerview:recyclerview:1.2.0-beta02"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
     implementation "androidx.core:core-animation:1.0.0-alpha02"
     implementation "androidx.vectordrawable:vectordrawable-animated:1.1.0"
